# fiap_techchallenge02

./: .gitignore  Auto Correlation (ACF).html  Diagnostics Plot.html  Frequency Components (FFT).html  Frequency Components (Periodogram).html  Makefile  Partial Auto Correlation (PACF).html  README.md  Time Series Plot.html  pyproject.toml
data/: Ibovespa_012021-022024.csv  Ibovespa_20100101-20240224.csv  Ibovespa_20210101-2024024.csv
src/tech_challenge_fase02/: app.py
src/tech_challenge_fase02/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
web-tech02/: _quarto.yml  index.qmd
web_tech02/: _publish.yml  _quarto.yml  eda.qmd  explore.out.RData  index.out.RData  index.qmd  models.qmd  utils.R
web_tech02/_site/: about.html  index.html  search.json
web_tech02/docs/: about.html  index.html  robots.txt  search.json  sitemap.xml
web_tech02/models_cache/html/: __packages  fig-ensemble_models_b5173563f894a1db94f871d3ddf17b62.RData  fig-ensemble_models_b5173563f894a1db94f871d3ddf17b62.rdb  fig-ensemble_models_b5173563f894a1db94f871d3ddf17b62.rdx  fig-fct_automl_test_368fc52fbafa9bcb87ab9fe70e5bca83.RData  fig-fct_automl_test_368fc52fbafa9bcb87ab9fe70e5bca83.rdx  fig-fct_out_of_sample_aa2fcded17805418d64522d75e2a4624.RData  fig-fct_out_of_sample_aa2fcded17805418d64522d75e2a4624.rdx  fig-fct_out_of_sample_automl_cfd1a385e4fc2e5b7805de5c4718cade.RData  fig-fct_out_of_sample_automl_cfd1a385e4fc2e5b7805de5c4718cade.rdb  fig-fct_out_of_sample_automl_cfd1a385e4fc2e5b7805de5c4718cade.rdx  fig-fct_out_of_sample_ensemble_718583fe1e077dd2423d16d5cc19060e.RData  (+36 more)
(+14 files in other folders)
